fix: table alignment

--- a/client/src/components/ListItem/index.module.css
+++ b/client/src/components/ListItem/index.module.css
@@ -12,3 +12,7 @@
 .itemIcon {
   margin: 0px 10px;
 }
+
+.cell {
+  flex: 1;
+}
