--- a/client/src/components/ListView/index.module.css
+++ b/client/src/components/ListView/index.module.css
@@ -15,3 +15,7 @@
   color: var(--icon);
   cursor: pointer;
 }
+
+.cell {
+  flex: 1;
+}
